--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -23,6 +23,7 @@ body {
 img {
 	max-width: 100%;
 	@include sizing(auto, auto);
+	display: block;
 }
 
 h1, h2, h3, h4, h5, h6, p, figure, pre, code {
