--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -17,8 +17,8 @@ $color-06: #a4c27e; // green
 $color-07: #7ea8c2; // blue
 $color-08: #333333; // blackish
 $color-09: #fcfcce; // pale yellow
-$color-10: #17261e; // green
-$color-11: #2a432a; // green
+$color-10: #1c2f25; // green
+$color-11: #d31141; // red
 $color-12: #333333; // 
 $color-13: #333333; // 
 $color-14: #333333; // 
