--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -18,6 +18,7 @@
 @import 'prosilver';
 @import 'base';
 @import 'typography';
+@import 'rpg-icons';
 @import 'form-fields';
 // @import 'vendors';
 @import 'layout';
