--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -21,7 +21,7 @@ input[type='text'], input[type='password'], input[type='email'], input[type='url
 	outline: 0;
 }
 
-input[type='text'], input[type='password'], input[type='email'], input[type='url'], input[type='button'], input[type='reset'], input[type='submit'], select, button {
+input[type='text'], input[type='password'], input[type='email'], input[type='url'], select {
 	line-height: 35px;
 	height: 35px;
 	border: 0;
@@ -29,7 +29,7 @@ input[type='text'], input[type='password'], input[type='email'], input[type='url
 
 input[type='text'], input[type='password'], input[type='email'], input[type='url'], select, textarea {
 	background: $color-12;
-	border-radius: 4px;
+	border-radius: 3px;
 	color: $color-02;
 	width: 100%;
 	margin: 0 0 20px 0;
@@ -46,6 +46,27 @@ textarea {
 
 select option {
 	color: $color-02;
+}
+
+input[type='submit'], .button {
+	background: $color-10;
+	color: $color-01;
+	border-radius: 3px;
+	border: 0;
+	padding: 10px 20px;
+	text-shadow: 1px 1px 0 rgba($color-02, 0.95);
+	@include transition(background 0.3s ease-in-out);
+	&:hover {
+		background: $color-04;
+	}
+}
+
+a.button {
+	display: inline-block;
+	line-height: normal;
+	&:hover {
+		color: inherit;
+	}
 }
 
 label {
