--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
@@ -178,6 +178,6 @@ h5, h6 {
 	font-size: rem(16px);
 }
 
-.icon + span, span + .icon {
+.icon + span:not(.sr-only), span:not(.sr-only) + .icon {
 	margin: 0 0 0 5px;
 }
