--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -19,7 +19,7 @@ $color-08: #333333; // blackish
 $color-09: #fcfcce; // pale yellow
 $color-10: #1c2f25; // green
 $color-11: #d31141; // red
-$color-12: #333333; // 
+$color-12: #090909; // blackish
 $color-13: #333333; // 
 $color-14: #333333; // 
 
